--- a/Extract Transform Load.ipynb
+++ b/Extract Transform Load.ipynb
@@ -16,13 +16,9 @@
     "from datetime import date, datetime\n",
     "import requests\n",
     "import pandas as pd\n",
-    "import os\n",
     "import json\n",
-    "import re\n",
     "import requests\n",
-    "import sqlalchemy\n",
-    "from sqlalchemy.orm import sessionmaker\n",
-    "import sqlite3"
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -38,12 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extracting JSON data from public API of New York City website\n",
+    "# Extract:  Extracting JSON data from public API of New York City website and saving to a .csv file\n",
     "def _extract():\n",
     "    url = \"https://data.cityofnewyork.us/resource/rc75-m7u3.json\"\n",
     "    result_load = requests.get(url)\n",
     "    df = pd.DataFrame(json.loads(result_load.content))\n",
-    "    df.to_csv(\"covid_db_original_{}.csv\".format(date.today().strftime(\"%Y%m%d\")))\n",
+    "    df.to_csv(\"data/covid_db_original_{}.csv\".format(date.today().strftime(\"%Y%m%d\")))\n",
     "_extract()"
    ]
   },
@@ -60,13 +56,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.DataFrame(json.loads(result_load.content))\n",
+    "# Transform: Transforming the data using pandas\n",
+    "\n",
     "def _transform():\n",
-    "    df1 = pd.read_csv(\"covid_db_original_{}.csv\".format(date.today().strftime(\"%Y%m%d\")))\n",
+    "    df1 = pd.read_csv(\"data/covid_db_original_{}.csv\".format(date.today().strftime(\"%Y%m%d\")))\n",
     "    df1['date'] = df1['date_of_interest'].str.extract('(....-..-..)', expand=True)\n",
     "    df1.drop(df1.columns.difference(['date','case_count','hospitalized_count','death_count']), axis=1, inplace=True)\n",
     "    df1 = df1.set_index(\"date\")\n",
-    "    df1.to_csv(\"covid_db_transformed_{}.csv\".format(date.today().strftime(\"%Y%m%d\")))\n",
+    "    df1.to_csv(\"data/covid_db_transformed_{}.csv\".format(date.today().strftime(\"%Y%m%d\")))\n",
     "_transform()"
    ]
   },
@@ -93,36 +90,18 @@
     }
    ],
    "source": [
+    "# Load: Ingesting the transformed data into an SQLite Database\n",
+    "\n",
     "def _load():\n",
     "    \n",
-    "    df2 = pd.read_csv(\"covid_db_transformed_{}.csv\".format(date.today().strftime(\"%Y%m%d\")))\n",
-    "    \n",
+    "    df2 = pd.read_csv(\"data/covid_db_transformed_{}.csv\".format(date.today().strftime(\"%Y%m%d\")))\n",
     "    DATABASE_LOCATION = \"sqlite:///covid_db_cleaned.sqlite\"\n",
+    "    engine = create_engine(DATABASE_LOCATION, echo=True)\n",
+    "    sqlite_connection = engine.connect()\n",
+    "    sqlite_table = \"covid_data\"\n",
+    "    df2.to_sql(sqlite_table, sqlite_connection, if_exists='append')\n",
+    "    sqlite_connection.close()\n",
     "\n",
-    "    engine = sqlalchemy.create_engine(DATABASE_LOCATION)\n",
-    "    conn = sqlite3.connect('covid_db_cleaned.sqlite')\n",
-    "    cursor = conn.cursor()\n",
-    "\n",
-    "    sql_query = \"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS covid_db_cleaned (\n",
-    "            date DATE,\n",
-    "            case_count INT,\n",
-    "            hospitalized_count INT,\n",
-    "            death_count INT,\n",
-    "            PRIMARY KEY (date)\n",
-    "    )\n",
-    "    \"\"\"\n",
-    "\n",
-    "    cursor.execute(sql_query)\n",
-    "    print(\"Opened database successfully\")\n",
-    "\n",
-    "    try:\n",
-    "        df2.to_sql(\"covid_db_cleaned\", engine, index=False, if_exists='append',con=conn)\n",
-    "    except:\n",
-    "        print(\"Data already exists in the database\")\n",
-    "\n",
-    "    conn.close()\n",
-    "    print(\"Close database successfully\")\n",
     "_load()"
    ]
   },
@@ -136,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.5 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -150,7 +129,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "64b057bb55637613cc0087a1624c3196cd273d05de0f597cd99fb0604b3ecb4f"
+   }
   }
  },
  "nbformat": 4,
